--- a/src/app/landing.css
+++ b/src/app/landing.css
@@ -1,4 +1,5 @@
 .landing-text {
+  width: 100%;
   max-width: 17rem;
   white-space: pre-wrap;
 }
